crates/cli/tests/snapshots/empty_list_concat__fix_6d44e9727e67c4d4d91c4b7abe2a2193f00467aabdd6230c1019702fdabe53bb.snap
---
source: crates/cli/tests/empty_list_concat.rs
assertion_line: 5
expression: "\"[1 2] ++ [3 4]\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-[1 2] ++ [3 4]
+[ 1 2 3 4 ]
