crates/cli/tests/snapshots/empty_list_concat__fix_df1c6ef98c749f5c410a485b3d0d5d6851ad340d059d1012ed809a04a21a00a9.snap
---
source: crates/cli/tests/empty_list_concat.rs
expression: "\"[] ++ []\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-[] ++ []
+[]
