crates/cli/tests/snapshots/empty_list_concat__lint_676800f4240e26802590a123362636e6d87461d7e091b87b44fb8b5959b31b1a.snap
---
source: crates/cli/tests/empty_list_concat.rs
expression: "\"[1 2 3] ++ []\""
---
[23] Warning: Unnecessary concatenation with empty list
   ╭─[<temp_file_path>:1:1]
   │
 1 │ [1 2 3] ++ []
   │ ──────┬──────  
   │       ╰──────── Concatenation with the empty list, [], is a no-op
───╯
