crates/cli/tests/snapshots/empty_list_concat__lint_b13b2273654200cbc2315c6ceec0dbc9e4479628a5b7250418efeb5911e743b2.snap
---
source: crates/cli/tests/empty_list_concat.rs
expression: "\"[] ++ [] ++ []\""
---
[W23] Warning: Unnecessary concatenation with empty list
   ╭─[<temp_file_path>:1:1]
   │
 1 │ [] ++ [] ++ []
   · ───────┬──────  
   ·        ╰──────── Concatenation with the empty list, [], is a no-op
───╯
[W23] Warning: Unnecessary concatenation with empty list
   ╭─[<temp_file_path>:1:7]
   │
 1 │ [] ++ [] ++ []
   ·       ────┬───  
   ·           ╰───── Concatenation with the empty list, [], is a no-op
───╯
